--- a/app.json
+++ b/app.json
@@ -3,14 +3,17 @@
     "pages/index/index",
     "pages/logs/logs",
     "pages/personal/personal",
-    "pages/advertising/advertising"
+    "pages/advertising/advertising"    
   ],
   "subpackages": [
     {
       "root": "packageA",
       "name": "packA",
       "pages": [
-        "pages/statistical/statistical"
+        "pages/statistical/statistical",
+        "pages/echarts/echarts",
+        "pages/report/report",
+        "pages/manager/manager"
       ]
     }
   ],
