--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 2,
 			"list": [
 				{
 					"id": 0,
@@ -52,9 +52,9 @@
 					"query": ""
 				},
 				{
-					"id": -1,
+					"id": 2,
 					"name": "我的",
-					"pathName": "pages/personal/personal",
+					"pathName": "pages/login/login",
 					"query": ""
 				}
 			]
