--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.4.2",
-	"appid": "wxb779b8e1cbeb5381",
+	"appid": "wxc11b5ae00c72aac0",
 	"projectname": "week",
 	"debugOptions": {
 		"hidedInDevtools": []
